unpackaged/main/default/objects/conference360__Event_Ad__c/conference360__Event_Ad__c.object-meta.xml
<CustomObject>
    <label>Event Ad</label>
    <nameField>
        <displayFormat>EA-{000000}</displayFormat>
        <label>Event Ad Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Ads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>