unpackaged/main/default/objects/conference360__Event_Ad__c/fields/conference360__Media_URL__c.field-meta.xml
<CustomField>
    <fullName>conference360__Media_URL__c</fullName>
    <label>Media URL</label>
    <type>Url</type>
</CustomField>