unpackaged/main/default/objects/conference360__Event_Ad__c/fields/conference360__Sponsor_Account__c.field-meta.xml
<CustomField>
    <fullName>conference360__Sponsor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsor (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Ads</relationshipLabel>
    <relationshipName>Event_Ads</relationshipName>
    <type>Lookup</type>
</CustomField>