unpackaged/main/default/objects/conference360__Event_Ad__c/fields/conference360__Sponsor_Event__c.field-meta.xml
<CustomField>
    <fullName>conference360__Sponsor_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsor (Event)</label>
    <referenceTo>conference360__Sponsor__c</referenceTo>
    <relationshipLabel>Event Ads</relationshipLabel>
    <relationshipName>Event_Ads</relationshipName>
    <type>Lookup</type>
</CustomField>